--- a/index.html
+++ b/index.html
@@ -1,42 +1,23 @@
 <!Doctypehtml>
 <html>
-<link href="stylesheet.css" type="text/css" rel="stylesheet">
 <head>
+<link href="stylesheet.css" type="text/css" rel="stylesheet">
+</head>
 <body>
 <div class="lightyellow">
-<p> 
-<center>
- Kenny.G 
- </center>
- </p>
+<p> <center>Kenny.G</center></p>
 </div>
 <div class="greenish">
-<p>
- <center>
- Kenny.G
- </center> 
- </p>
+<p><center>Kenny.G</center></p>
 </div>
 <div class="brown">
-<p> 
-<center>
- Kenny.G
- </center> 
- </p>
+<p> <center>Kenny.G</center></p>
 </div>
 <div class="black">
-<p> 
-<center>
- Kenny.G 
-</center> 
-</p>
+<p> <center>Kenny.G </center></p>
 </div>
 <div class="white">
-<p> <center>
- Kenny.G
- </center> 
- </p>
+<p> <center> Kenny.G</center> </p>
 </div>
 </body>
-</head>
 </html>
